fix spacing to allow 10 leaders on the leaderboard

--- a/src/client/leaderboard/stylesheets/sass/screen.css
+++ b/src/client/leaderboard/stylesheets/sass/screen.css
@@ -65,7 +65,7 @@ ul.leaders li {
   font-size: 1.7em;
   font-weight: 800;
   letter-spacing: 2px;
-  padding: 2.35% 2.55%;
+  padding: 2.15% 2.55% 1.6%;
   height: 100%;
 }
 /* line 119, ../../sass/sass/screen.scss */
